# Sigma-prototype

./: .dockerignore  .gitignore  APPROACH.md  Dockerfile  README.md  docker-compose.yml
backend/: agent.py  langgraph.json  main.py  models.py  prompts.py  pyproject.toml  state.py  streaming.md  tools.py
backend/sigma_horo_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: next.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: AutoModeToggle.tsx  CanvasPanel.tsx  ChangePreview.tsx  ChatInterface.tsx  ChatMessage.tsx  VersionHistory.tsx
frontend/src/app/hooks/: useChat.ts
frontend/src/app/types/: types.ts
frontend/src/lib/: config.ts
